--- a/imagePr/mysql-image/Dockerfile
+++ b/imagePr/mysql-image/Dockerfile
@@ -1,8 +1,8 @@
 
 FROM mysql:5.7.26
-ENV MYSQL_ROOT_PASSWORD=password
-ENV MYSQL_DATABASE=myapp
-ENV MYSQL_USER=myuser
-ENV MYSQL_PASSWORD=mypassword
+ENV MYSQL_ROOT_PASSWORD: rootpassword
+ENV MYSQL_DATABASE: News_Db
+ENV MYSQL_USER: user
+ENV MYSQL_PASSWORD: password
 
 COPY ./schema.sql /docker-entrypoint-initdb.d/
