--- a/imagePr/docker-compose.yml
+++ b/imagePr/docker-compose.yml
@@ -4,12 +4,12 @@ services:
   database:
     build: ./mysql-image
     environment:
-       MYSQL_ROOT_PASSWORD: password
-       MYSQL_DATABASE: myapp
-       MYSQL_USER: myuser
-       MYSQL_PASSWORD: mypassword
+       MYSQL_ROOT_PASSWORD: rootpassword
+       MYSQL_DATABASE: News_Db
+       MYSQL_USER: user
+       MYSQL_PASSWORD: password
     ports:
-      - "3307:3307"
+      - "3306:3306"
   
   backend:
     build: ./backend-image
